# ordne

./: .gitignore  .gitignore~  .travis.yml  COPYING  LICENSE  README.md  README.md~  com.github.candiedoperation.ordne.yml  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
data/: com.github.candiedoperation.ordne.appdata.xml.in  com.github.candiedoperation.ordne.desktop.in  gschema.xml  meson.build  meson.build~  ordne.appdata.xml  ordne.appdata.xml~  pomo-ordne.desktop
po/: com.github.candiedoperation.ordne.pot
po/extra/: POTFILES  extra.pot
src/: Application  Application.vala  Application.vala~  MainWindow.vala
